--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@
 [platformio]
 ;home_dir = C:\platformio
 src_dir = lighthub
-;monitor_speed = 115200
+
 default_envs =
 ;   ****** UNCOMMENT single environment name for target platform below *******
 ; Arduino Mega (without onewire) + Ethernet shield Wiznet 5100
@@ -19,8 +19,9 @@ default_envs =
 ; Arduino Mega + Ethernet shield Wiznet 5100
 ;    mega2560-5100
 
-; Arduino Mega  + Ethernet shield Wiznet 5500
-;    mega2560-5500
+; Arduino Mega Emb  + Ethernet shield Wiznet 5500 (Wiznet 5500 CS on pin 53)
+;
+    smartlife
 
 ; LightHub controller HW revision 2.1 and above (Wiznet 5500 CS on pin 53)
 ;    lighthub21
@@ -491,6 +492,46 @@ lib_deps =
         ClosedCube HDC1080
         SparkFun CCS811 Arduino Library
 
+[env:smartlife]
+platform = atmelavr
+board = megaatmega2560
+monitor_speed = 115200
+framework = arduino
+build_flags = !python get_build_flags.py smartlife
+lib_ignore =
+        DHT sensor library for ESPx
+        DmxDue
+        DueFlashStorage
+        WifiManagerexit
+        
+        Ethernet
+        Ethernet3
+        HTTPClient
+        NRFFlashStorage
+        WebServer
+        UIPEthernet
+        ESP_EEPROM
+        M5Stack
+lib_deps =
+        https://github.com/anklimov/Arduino-Temperature-Control-Library.git
+        https://github.com/anklimov/DS2482_OneWire
+        https://github.com/anklimov/DmxSimple
+        https://github.com/anklimov/httpClient
+        https://github.com/anklimov/aJson
+        https://github.com/anklimov/CmdArduino
+        https://github.com/anklimov/ModbusMaster
+        https://github.com/anklimov/DMXSerial
+        https://github.com/anklimov/Ethernet2
+        https://github.com/knolleary/pubsubclient.git
+        https://github.com/anklimov/Artnet.git
+        FastLED
+        Adafruit Unified Sensor
+        DHT sensor library
+        https://github.com/arcao/Syslog.git
+        Streaming
+        ClosedCube HDC1080
+        SparkFun CCS811 Arduino Library
+;upload_speed = 9600
 
 [env:controllino]
 platform = atmelavr
